--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -108,9 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 4 submissions from the top. (This can be less than num_samples.)\n",
+      "Got 4 submissions from rising. (This can be less than num_samples.)\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Sample num_samples random submissions, and get the top num_samples submissions, and put them into dataframes.\n",
@@ -119,26 +128,42 @@
     "def random_sample(num_samples, subreddit):\n",
     "    sample = []\n",
     "    for i in range(num_samples):\n",
-    "        submission = reddit.subreddit('wallstreetbets').random() \n",
+    "        submission = reddit.subreddit(subreddit).random() \n",
     "        sample.append(extract_data(submission))\n",
     "    return(pd.DataFrame(sample))\n",
     "    \n",
     "def top_sample(num_samples, subreddit):\n",
     "    top_submissions = []\n",
-    "    for submission in reddit.subreddit('wallstreetbets').top(limit=num_samples):\n",
+    "    for submission in reddit.subreddit(subreddit).top(limit=num_samples):\n",
     "        top_submissions.append(extract_data(submission))\n",
-    "    print(f\"Produced {len(top_submissions)} samples\")\n",
+    "    print(f\"Got {len(top_submissions)} submissions from the top. (This can be less than num_samples.)\")\n",
     "    return(pd.DataFrame(top_submissions))\n",
     "\n",
-    "num_samples = 10\n",
+    "def rising_sample(num_samples, subreddit):\n",
+    "    # NB: There is also rising_random\n",
+    "    rising = []\n",
+    "    for submission in reddit.subreddit(subreddit).rising(limit=num_samples):\n",
+    "        rising.append(extract_data(submission))\n",
+    "    print(f\"Got {len(rising)} submissions from rising. (This can be less than num_samples.)\")\n",
+    "    return(pd.DataFrame(rising))\n",
+    "\n",
+    "num_samples = 4\n",
     "subreddit ='wallstreetbets'\n",
     "\n",
     "random_wsb = random_sample(num_samples, subreddit)\n",
-    "top_wsb = random_sample(num_samples,subreddit)\n",
-    "\n",
+    "top_wsb = top_sample(num_samples,subreddit)\n",
+    "rising_wsb = rising_sample(num_samples, subreddit)\n",
     "# other commands here: https://praw.readthedocs.io/en/latest/code_overview/models/subreddit.html#praw.models.Subreddit.rising\n",
-    "# NB: The subreddit stream option seems useful."
+    "# NB: The subreddit stream option seems useful.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -149,7 +174,7 @@
    "outputs": [],
    "source": [
     "random_wsb.to_pickle(\"random_wsb.pkl\")\n",
-    "top_wsb.to_pickle(\"top_wsb.pkl\")"
+    "top_wsb.to_pickle(\"top_wsb.pkl\")\n"
    ]
   },
   {
@@ -165,24 +190,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# traffic = reddit.subreddit(subreddit).traffic() is not available to us, sadly."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wsb = reddit.subreddit(subreddit).rising(limit = 10)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Submission(id='n6i28o'),\n",
+       " Submission(id='n6hwq5'),\n",
+       " Submission(id='n6i0cs'),\n",
+       " Submission(id='n6iyw5'),\n",
+       " Submission(id='n6irbo'),\n",
+       " Submission(id='n6imtg'),\n",
+       " Submission(id='n6isa2'),\n",
+       " Submission(id='n6ini7'),\n",
+       " Submission(id='n6j2kf'),\n",
+       " Submission(id='n6ilkv')]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(wsb)"
+   ]
   },
   {
    "cell_type": "code",
