--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nhttps://stackoverflow.com/questions/48358837/pulling-reddit-comments-using-python-praw-and-creating-a-dataframe-with-the-resu\\nhttps://www.reddit.com/r/redditdev/comments/2e2q2l/praw_downvote_count_always_zero/\\nhttps://towardsdatascience.com/an-easy-tutorial-about-sentiment-analysis-with-deep-learning-and-keras-2bf52b9cba91\\n'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,7 +22,8 @@
     "import re                     \n",
     "import datetime as dt\n",
     "import seaborn as sns\n",
-    "\n",
+    "import requests\n",
+    "import json\n",
     "## acknowledgements\n",
     "'''\n",
     "https://stackoverflow.com/questions/48358837/pulling-reddit-comments-using-python-praw-and-creating-a-dataframe-with-the-resu\n",
@@ -177,51 +178,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 111,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Subreddit' object has no attribute 'submissions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-56-9b397b17e103>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mnow_timestamp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0msubmission\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreddit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubreddit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'subreddit'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubmissions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpast_timestamp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnow_timestamp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubmission\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreated_utc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\praw\\models\\reddit\\base.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attribute)\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mattribute\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fetched\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fetch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattribute\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m         raise AttributeError(\n\u001b[0;32m     36\u001b[0m             \"{!r} object has no attribute {!r}\".format(\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\praw\\models\\reddit\\base.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attribute)\u001b[0m\n\u001b[0;32m     35\u001b[0m         raise AttributeError(\n\u001b[0;32m     36\u001b[0m             \"{!r} object has no attribute {!r}\".format(\n\u001b[1;32m---> 37\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattribute\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m             )\n\u001b[0;32m     39\u001b[0m         )\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Subreddit' object has no attribute 'submissions'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Code for getting all submissions between certain date time\n",
     "\n",
     "https://www.reddit.com/r/redditdev/comments/5gfvik/praw_getting_all_submissions_for_the_past_two/\n",
     "\n",
+    "for submission in reddit.subreddit('subreddit').submissions(past_timestamp, now_timestamp):\n",
+    "    print(submission.created_utc)\n",
+    "    \n",
     "This no longer works, see here: https://stackoverflow.com/questions/53988619/praw-6-get-all-submission-of-a-subreddit\n",
+    "\n",
+    "Example of using pushshift: https://github.com/Watchful1/Sketchpad/blob/master/postDownloader.py\n",
+    "\n",
     "'''\n",
     "\n",
-    "past = dt.datetime(2021, 4, 19)\n",
-    "past_timestamp = past.replace(tzinfo=dt.timezone.utc).timestamp()\n",
+    "past = dt.datetime(2021, 5, 5)\n",
+    "past_timestamp = int(past.replace(tzinfo=dt.timezone.utc).timestamp())\n",
     "\n",
     "now = dt.datetime.now()\n",
-    "now_timestamp = now.replace(tzinfo=dt.timezone.utc).timestamp()\n",
+    "now_timestamp = int(now.replace(tzinfo=dt.timezone.utc).timestamp())\n",
     "now_timestamp\n",
     "\n",
-    "for submission in reddit.subreddit('subreddit').submissions(past_timestamp, now_timestamp):\n",
-    "    print(submission.created_utc)"
+    "url = f\"https://api.pushshift.io/reddit/submission/search/?after={past_timestamp}&before={now_timestamp}&sort_type=score&sort=desc&subreddit=wallstreetbets&limit=1000\"\n",
+    "\n",
+    "data = requests.get(url)\n",
+    "data_json = data.json()\n",
+    "wsb_df = pd.DataFrame(data_json['data'])\n",
+    "wsb_cleaned = wsb_df[['title', 'created_utc', 'author_fullname', 'is_self', 'score', 'upvote_ratio', 'total_awards_received', 'selftext']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>author_fullname</th>\n",
+       "      <th>is_self</th>\n",
+       "      <th>score</th>\n",
+       "      <th>upvote_ratio</th>\n",
+       "      <th>total_awards_received</th>\n",
+       "      <th>selftext</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Road to a million. PT - 4.20</td>\n",
+       "      <td>1620188932</td>\n",
+       "      <td>t2_cgv2s</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMC to the fucking moon!</td>\n",
+       "      <td>1620188150</td>\n",
+       "      <td>t2_amfmcir4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[removed]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$ADVM</td>\n",
+       "      <td>1620192122</td>\n",
+       "      <td>t2_996goyhn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>thoughts on ADVM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>who is holding until $1?</td>\n",
+       "      <td>1620247136</td>\n",
+       "      <td>t2_833jvfk5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Quick, the mods are on vacation today! Finally...</td>\n",
+       "      <td>1620291886</td>\n",
+       "      <td>t2_wjufi</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>GME - 2021 Annual Meeting - VOT3</td>\n",
+       "      <td>1620213700</td>\n",
+       "      <td>t2_41wicud8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[removed]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Getting started</td>\n",
+       "      <td>1620215264</td>\n",
+       "      <td>t2_9kb8uvo4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[removed]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>$AHT calls gonna print money tm</td>\n",
+       "      <td>1620173223</td>\n",
+       "      <td>t2_1zn5jf9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>TLRY and tobacco giant Philip morris</td>\n",
+       "      <td>1620172910</td>\n",
+       "      <td>t2_7sd456rk</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Only real danger to tlry are big tobacco compa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Serious question...</td>\n",
+       "      <td>1620218075</td>\n",
+       "      <td>t2_80qt9nhf</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Dog...How high will it go and please don't say...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                title  created_utc  \\\n",
+       "0                        Road to a million. PT - 4.20   1620188932   \n",
+       "1                            AMC to the fucking moon!   1620188150   \n",
+       "2                                               $ADVM   1620192122   \n",
+       "3                            who is holding until $1?   1620247136   \n",
+       "4   Quick, the mods are on vacation today! Finally...   1620291886   \n",
+       "..                                                ...          ...   \n",
+       "95                   GME - 2021 Annual Meeting - VOT3   1620213700   \n",
+       "96                                    Getting started   1620215264   \n",
+       "97                    $AHT calls gonna print money tm   1620173223   \n",
+       "98               TLRY and tobacco giant Philip morris   1620172910   \n",
+       "99                                Serious question...   1620218075   \n",
+       "\n",
+       "   author_fullname  is_self  score  upvote_ratio  total_awards_received  \\\n",
+       "0         t2_cgv2s    False      2          1.00                      0   \n",
+       "1      t2_amfmcir4     True      2          1.00                      0   \n",
+       "2      t2_996goyhn     True      2          1.00                      0   \n",
+       "3      t2_833jvfk5    False      2          1.00                      0   \n",
+       "4         t2_wjufi    False      2          0.75                      0   \n",
+       "..             ...      ...    ...           ...                    ...   \n",
+       "95     t2_41wicud8     True      1          1.00                      0   \n",
+       "96     t2_9kb8uvo4     True      1          1.00                      0   \n",
+       "97      t2_1zn5jf9    False      1          1.00                      0   \n",
+       "98     t2_7sd456rk     True      1          1.00                      0   \n",
+       "99     t2_80qt9nhf     True      1          1.00                      0   \n",
+       "\n",
+       "                                             selftext  \n",
+       "0                                                      \n",
+       "1                                           [removed]  \n",
+       "2                                    thoughts on ADVM  \n",
+       "3                                                      \n",
+       "4                                                      \n",
+       "..                                                ...  \n",
+       "95                                          [removed]  \n",
+       "96                                          [removed]  \n",
+       "97                                                     \n",
+       "98  Only real danger to tlry are big tobacco compa...  \n",
+       "99  Dog...How high will it go and please don't say...  \n",
+       "\n",
+       "[100 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wsb_cleaned"
+   ]
   },
   {
    "cell_type": "code",
@@ -230,9 +435,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "#sns.lmplot(data = random_wsb, x = \"total_awards\", y = \"ups\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -248,9 +451,7 @@
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wsb = reddit.subreddit(subreddit).rising(limit = 10)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -537,9 +738,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "controversial_wsb"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
