--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nhttps://stackoverflow.com/questions/48358837/pulling-reddit-comments-using-python-praw-and-creating-a-dataframe-with-the-resu\\nhttps://www.reddit.com/r/redditdev/comments/2e2q2l/praw_downvote_count_always_zero/\\nhttps://towardsdatascience.com/an-easy-tutorial-about-sentiment-analysis-with-deep-learning-and-keras-2bf52b9cba91\\n'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,11 +24,15 @@
     "import seaborn as sns\n",
     "import requests\n",
     "import json\n",
+    "import sys\n",
+    "import time\n",
     "## acknowledgements\n",
     "'''\n",
     "https://stackoverflow.com/questions/48358837/pulling-reddit-comments-using-python-praw-and-creating-a-dataframe-with-the-resu\n",
     "https://www.reddit.com/r/redditdev/comments/2e2q2l/praw_downvote_count_always_zero/\n",
     "https://towardsdatascience.com/an-easy-tutorial-about-sentiment-analysis-with-deep-learning-and-keras-2bf52b9cba91\n",
+    "\n",
+    "For navigating pushshift: https://github.com/Watchful1/Sketchpad/blob/master/postDownloader.py\n",
     "'''"
    ]
   },
@@ -178,11 +182,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 146,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time is currently 1620330846\n",
+      "Target time: 1620172800, current end point 1620331154\n",
+      "Target time: 1620172800, current end point 1620328497\n",
+      "Target time: 1620172800, current end point 1620325811\n",
+      "Target time: 1620172800, current end point 1620322837\n",
+      "Target time: 1620172800, current end point 1620320763\n",
+      "Target time: 1620172800, current end point 1620318140\n",
+      "Target time: 1620172800, current end point 1620315267\n",
+      "Target time: 1620172800, current end point 1620312618\n",
+      "Target time: 1620172800, current end point 1620310535\n",
+      "Target time: 1620172800, current end point 1620308681\n",
+      "Target time: 1620172800, current end point 1620305936\n",
+      "Target time: 1620172800, current end point 1620302646\n",
+      "Target time: 1620172800, current end point 1620299866\n",
+      "Target time: 1620172800, current end point 1620295283\n",
+      "Target time: 1620172800, current end point 1620291186\n",
+      "Target time: 1620172800, current end point 1620285944\n",
+      "Target time: 1620172800, current end point 1620281305\n",
+      "Target time: 1620172800, current end point 1620276902\n",
+      "Target time: 1620172800, current end point 1620274107\n",
+      "Target time: 1620172800, current end point 1620270394\n",
+      "Target time: 1620172800, current end point 1620266411\n",
+      "Target time: 1620172800, current end point 1620262656\n",
+      "Target time: 1620172800, current end point 1620258350\n",
+      "Target time: 1620172800, current end point 1620254505\n",
+      "Target time: 1620172800, current end point 1620250700\n",
+      "Target time: 1620172800, current end point 1620247952\n",
+      "Target time: 1620172800, current end point 1620245438\n",
+      "Target time: 1620172800, current end point 1620241912\n",
+      "Target time: 1620172800, current end point 1620238659\n",
+      "Target time: 1620172800, current end point 1620235668\n",
+      "Target time: 1620172800, current end point 1620232699\n",
+      "Target time: 1620172800, current end point 1620229948\n",
+      "Target time: 1620172800, current end point 1620227478\n",
+      "Target time: 1620172800, current end point 1620224968\n",
+      "Target time: 1620172800, current end point 1620222663\n",
+      "Target time: 1620172800, current end point 1620219037\n",
+      "Target time: 1620172800, current end point 1620213120\n",
+      "Target time: 1620172800, current end point 1620204530\n",
+      "Target time: 1620172800, current end point 1620194370\n",
+      "Target time: 1620172800, current end point 1620187733\n",
+      "Target time: 1620172800, current end point 1620181588\n",
+      "Target time: 1620172800, current end point 1620176553\n",
+      "Target time: 1620172800, current end point 1620172865\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Code for getting all submissions between certain date time\n",
@@ -198,24 +253,40 @@
     "\n",
     "'''\n",
     "\n",
+    "\n",
     "past = dt.datetime(2021, 5, 5)\n",
-    "past_timestamp = int(past.replace(tzinfo=dt.timezone.utc).timestamp())\n",
+    "start_time = int(past.replace(tzinfo=dt.timezone.utc).timestamp())\n",
     "\n",
     "now = dt.datetime.now()\n",
-    "now_timestamp = int(now.replace(tzinfo=dt.timezone.utc).timestamp())\n",
-    "now_timestamp\n",
+    "end_time = int(now.replace(tzinfo=dt.timezone.utc).timestamp())\n",
+    "print(f\"time is currently {now_timestamp}\")\n",
     "\n",
-    "url = f\"https://api.pushshift.io/reddit/submission/search/?after={past_timestamp}&before={now_timestamp}&sort_type=score&sort=desc&subreddit=wallstreetbets&limit=1000\"\n",
+    "def get_all_submissions(start_time, end_time):\n",
+    "    end = end_time\n",
+    "    df = pd.DataFrame()\n",
+    "    while end > start_time:\n",
+    "        time.sleep(1) # Requests are rate limited\n",
+    "        print(f\"Target time: {start_time}, current end point {end}, remaining {end - start_time}\")\n",
+    "        url = f\"https://api.pushshift.io/reddit/submission/search/?after={start_time}&before={end}&sort_type=created_utc&sort=desc&subreddit=wallstreetbets&limit=1000\"\n",
+    "        data = requests.get(url)\n",
+    "        data_json = data.json()\n",
+    "        if len(data_json['data']) == 0:\n",
+    "            # break if there is no returned data\n",
+    "            break\n",
+    "        temp_df = pd.DataFrame(data_json['data'])\n",
+    "        end = min(temp_df.created_utc)\n",
+    "        df = df.append(temp_df)\n",
+    "        \n",
+    "    return df\n",
     "\n",
-    "data = requests.get(url)\n",
-    "data_json = data.json()\n",
-    "wsb_df = pd.DataFrame(data_json['data'])\n",
-    "wsb_cleaned = wsb_df[['title', 'created_utc', 'author_fullname', 'is_self', 'score', 'upvote_ratio', 'total_awards_received', 'selftext']]"
+    "df = get_all_submissions(start_time, end_time)\n",
+    "wsb_cleaned = df[['title', 'created_utc', 'author_fullname', 'is_self', 'score', 'upvote_ratio', 'total_awards_received', 'selftext']]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -252,58 +323,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Road to a million. PT - 4.20</td>\n",
-       "      <td>1620188932</td>\n",
-       "      <td>t2_cgv2s</td>\n",
+       "      <td>*** HOW TO BUY SAFEMOON ***</td>\n",
+       "      <td>1620331108</td>\n",
+       "      <td>t2_3nrb619p</td>\n",
        "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AMC to the fucking moon!</td>\n",
-       "      <td>1620188150</td>\n",
-       "      <td>t2_amfmcir4</td>\n",
+       "      <td>ATNX is at $4</td>\n",
+       "      <td>1620331104</td>\n",
+       "      <td>t2_134ktal</td>\n",
        "      <td>True</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Athenex is a pharmaceutical company that devel...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wallstreetbets as we knew it is gone. Migrate ...</td>\n",
+       "      <td>1620331102</td>\n",
+       "      <td>t2_dxs3j</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>[removed]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>$ADVM</td>\n",
-       "      <td>1620192122</td>\n",
-       "      <td>t2_996goyhn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>thoughts on ADVM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>who is holding until $1?</td>\n",
-       "      <td>1620247136</td>\n",
-       "      <td>t2_833jvfk5</td>\n",
+       "      <td>Went to absolute fucking WAR today...</td>\n",
+       "      <td>1620331038</td>\n",
+       "      <td>t2_35h1202u</td>\n",
        "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Quick, the mods are on vacation today! Finally...</td>\n",
-       "      <td>1620291886</td>\n",
-       "      <td>t2_wjufi</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.75</td>\n",
+       "      <td>Scott, Cook, and Gensler: They don't want \"any...</td>\n",
+       "      <td>1620331005</td>\n",
+       "      <td>t2_98axkoub</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td></td>\n",
+       "      <td>&amp;amp;#x200B;\\n\\n# US House Financial Services ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -317,115 +388,135 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>GME - 2021 Annual Meeting - VOT3</td>\n",
-       "      <td>1620213700</td>\n",
-       "      <td>t2_41wicud8</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[removed]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Getting started</td>\n",
-       "      <td>1620215264</td>\n",
-       "      <td>t2_9kb8uvo4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[removed]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>54</th>\n",
        "      <td>$AHT calls gonna print money tm</td>\n",
        "      <td>1620173223</td>\n",
        "      <td>t2_1zn5jf9</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
+       "      <th>55</th>\n",
+       "      <td>What's an exit strategy?</td>\n",
+       "      <td>1620173185</td>\n",
+       "      <td>t2_ho7wp</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
        "      <td>TLRY and tobacco giant Philip morris</td>\n",
        "      <td>1620172910</td>\n",
        "      <td>t2_7sd456rk</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Only real danger to tlry are big tobacco compa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Serious question...</td>\n",
-       "      <td>1620218075</td>\n",
-       "      <td>t2_80qt9nhf</td>\n",
-       "      <td>True</td>\n",
+       "      <th>57</th>\n",
+       "      <td>A wot?</td>\n",
+       "      <td>1620172874</td>\n",
+       "      <td>t2_mbtrj</td>\n",
+       "      <td>False</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Dog...How high will it go and please don't say...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>These guys! Would be ashame... if it went.... ...</td>\n",
+       "      <td>1620172865</td>\n",
+       "      <td>t2_bxwt17r7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 8 columns</p>\n",
+       "<p>4159 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                title  created_utc  \\\n",
-       "0                        Road to a million. PT - 4.20   1620188932   \n",
-       "1                            AMC to the fucking moon!   1620188150   \n",
-       "2                                               $ADVM   1620192122   \n",
-       "3                            who is holding until $1?   1620247136   \n",
-       "4   Quick, the mods are on vacation today! Finally...   1620291886   \n",
+       "0                         *** HOW TO BUY SAFEMOON ***   1620331108   \n",
+       "1                                       ATNX is at $4   1620331104   \n",
+       "2   Wallstreetbets as we knew it is gone. Migrate ...   1620331102   \n",
+       "3               Went to absolute fucking WAR today...   1620331038   \n",
+       "4   Scott, Cook, and Gensler: They don't want \"any...   1620331005   \n",
        "..                                                ...          ...   \n",
-       "95                   GME - 2021 Annual Meeting - VOT3   1620213700   \n",
-       "96                                    Getting started   1620215264   \n",
-       "97                    $AHT calls gonna print money tm   1620173223   \n",
-       "98               TLRY and tobacco giant Philip morris   1620172910   \n",
-       "99                                Serious question...   1620218075   \n",
+       "54                    $AHT calls gonna print money tm   1620173223   \n",
+       "55                           What's an exit strategy?   1620173185   \n",
+       "56               TLRY and tobacco giant Philip morris   1620172910   \n",
+       "57                                             A wot?   1620172874   \n",
+       "58  These guys! Would be ashame... if it went.... ...   1620172865   \n",
        "\n",
        "   author_fullname  is_self  score  upvote_ratio  total_awards_received  \\\n",
-       "0         t2_cgv2s    False      2          1.00                      0   \n",
-       "1      t2_amfmcir4     True      2          1.00                      0   \n",
-       "2      t2_996goyhn     True      2          1.00                      0   \n",
-       "3      t2_833jvfk5    False      2          1.00                      0   \n",
-       "4         t2_wjufi    False      2          0.75                      0   \n",
+       "0      t2_3nrb619p    False      1           1.0                      0   \n",
+       "1       t2_134ktal     True      1           1.0                      0   \n",
+       "2         t2_dxs3j     True      1           1.0                      0   \n",
+       "3      t2_35h1202u    False      1           1.0                      0   \n",
+       "4      t2_98axkoub     True      1           1.0                      0   \n",
        "..             ...      ...    ...           ...                    ...   \n",
-       "95     t2_41wicud8     True      1          1.00                      0   \n",
-       "96     t2_9kb8uvo4     True      1          1.00                      0   \n",
-       "97      t2_1zn5jf9    False      1          1.00                      0   \n",
-       "98     t2_7sd456rk     True      1          1.00                      0   \n",
-       "99     t2_80qt9nhf     True      1          1.00                      0   \n",
+       "54      t2_1zn5jf9    False      1           1.0                      0   \n",
+       "55        t2_ho7wp    False      1           1.0                      0   \n",
+       "56     t2_7sd456rk     True      1           1.0                      0   \n",
+       "57        t2_mbtrj    False      1           1.0                      0   \n",
+       "58     t2_bxwt17r7    False      1           1.0                      0   \n",
        "\n",
        "                                             selftext  \n",
        "0                                                      \n",
-       "1                                           [removed]  \n",
-       "2                                    thoughts on ADVM  \n",
+       "1   Athenex is a pharmaceutical company that devel...  \n",
+       "2                                           [removed]  \n",
        "3                                                      \n",
-       "4                                                      \n",
+       "4   &amp;#x200B;\\n\\n# US House Financial Services ...  \n",
        "..                                                ...  \n",
-       "95                                          [removed]  \n",
-       "96                                          [removed]  \n",
-       "97                                                     \n",
-       "98  Only real danger to tlry are big tobacco compa...  \n",
-       "99  Dog...How high will it go and please don't say...  \n",
+       "54                                                     \n",
+       "55                                                     \n",
+       "56  Only real danger to tlry are big tobacco compa...  \n",
+       "57                                                     \n",
+       "58                                                     \n",
        "\n",
-       "[100 rows x 8 columns]"
+       "[4159 rows x 8 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wsb_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': []}"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.json()"
    ]
   },
   {
