--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -320,199 +320,192 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Glorious Oracle of Ohama achieves pareto effic...</td>\n",
-       "      <td>n6lg1w</td>\n",
-       "      <td>1620345568</td>\n",
-       "      <td>t2_3qdkzqjm</td>\n",
+       "      <th>2493</th>\n",
+       "      <td>HOLDGME</td>\n",
+       "      <td>n5vldf</td>\n",
+       "      <td>1620263260</td>\n",
+       "      <td>t2_5syqfl4h</td>\n",
        "      <td>False</td>\n",
-       "      <td>1</td>\n",
+       "      <td>59820</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>199</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FLGT TO THE MOON...1ST QTR #S TODAY</td>\n",
-       "      <td>n6lfdp</td>\n",
-       "      <td>1620345502</td>\n",
-       "      <td>t2_a0mf559i</td>\n",
+       "      <th>1719</th>\n",
+       "      <td>The Insurrection of the Apes</td>\n",
+       "      <td>n63q7n</td>\n",
+       "      <td>1620294990</td>\n",
+       "      <td>t2_a2jxbzsv</td>\n",
+       "      <td>False</td>\n",
+       "      <td>40055</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>251</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>When will the dip dip???</td>\n",
+       "      <td>n6f0w5</td>\n",
+       "      <td>1620328286</td>\n",
+       "      <td>t2_5ulprski</td>\n",
+       "      <td>False</td>\n",
+       "      <td>35176</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>104</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1071</th>\n",
+       "      <td>We’ve been compromised!</td>\n",
+       "      <td>n69ajb</td>\n",
+       "      <td>1620313307</td>\n",
+       "      <td>t2_11cvrlt5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>29423</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>162</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>467</th>\n",
+       "      <td>No FOMO</td>\n",
+       "      <td>n6fig8</td>\n",
+       "      <td>1620329606</td>\n",
+       "      <td>t2_462jbyck</td>\n",
+       "      <td>False</td>\n",
+       "      <td>13523</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2044</th>\n",
+       "      <td>Got my first letter from Fidelity asking if I ...</td>\n",
+       "      <td>n605gl</td>\n",
+       "      <td>1620279374</td>\n",
+       "      <td>t2_110ph2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>13065</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>88</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>US Congress on today's GameStop hearing: \"We'v...</td>\n",
+       "      <td>n6csms</td>\n",
+       "      <td>1620322543</td>\n",
+       "      <td>t2_e0s1you</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7793</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1854</th>\n",
+       "      <td>WSB mods sleeping... AMC &amp;amp; GME to the mooo...</td>\n",
+       "      <td>n62fi3</td>\n",
+       "      <td>1620289149</td>\n",
+       "      <td>t2_a0qxqff0</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6163</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FLGT TO THE MOON...1ST QTR #S TODAY</td>\n",
+       "      <td>45</td>\n",
+       "      <td>AMC and GME let's go.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>OCGN Watch for Tomorrow...</td>\n",
-       "      <td>n6lfa5</td>\n",
-       "      <td>1620345492</td>\n",
-       "      <td>t2_a368t9uc</td>\n",
+       "      <th>2173</th>\n",
+       "      <td>BRING GME BACK!</td>\n",
+       "      <td>n5z4si</td>\n",
+       "      <td>1620275340</td>\n",
+       "      <td>t2_4b5sdbo4</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[removed]</td>\n",
+       "      <td>5820</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>76</td>\n",
+       "      <td>Enough with the new pump and dump every week, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>i think this fits here</td>\n",
-       "      <td>n6lefj</td>\n",
-       "      <td>1620345410</td>\n",
-       "      <td>t2_4ac5c7gb</td>\n",
+       "      <th>956</th>\n",
+       "      <td>100% concentration, all in GME! Final purchase...</td>\n",
+       "      <td>n6am1n</td>\n",
+       "      <td>1620316800</td>\n",
+       "      <td>t2_ah5h0y1b</td>\n",
        "      <td>False</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4995</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Sad 😔</td>\n",
-       "      <td>n6lecl</td>\n",
-       "      <td>1620345402</td>\n",
-       "      <td>t2_5qd02awb</td>\n",
-       "      <td>False</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2584</th>\n",
-       "      <td>ASO technical breakout and DD</td>\n",
-       "      <td>n5udz9</td>\n",
-       "      <td>1620259377</td>\n",
-       "      <td>t2_4p2nwfnu</td>\n",
-       "      <td>True</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>[removed]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2585</th>\n",
-       "      <td>First YOLO on CRSR</td>\n",
-       "      <td>n5udy3</td>\n",
-       "      <td>1620259375</td>\n",
-       "      <td>t2_6hp5jmev</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2586</th>\n",
-       "      <td>Rkt to the moon!</td>\n",
-       "      <td>n5udsv</td>\n",
-       "      <td>1620259363</td>\n",
-       "      <td>t2_7hzx72of</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2587</th>\n",
-       "      <td>My therapist told me I’m delusional for thinki...</td>\n",
-       "      <td>n5udq9</td>\n",
-       "      <td>1620259358</td>\n",
-       "      <td>t2_5juqx</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2588</th>\n",
-       "      <td>$CCIV - Lucid motors testing their FSD in Frem...</td>\n",
-       "      <td>n5ucbx</td>\n",
-       "      <td>1620259246</td>\n",
-       "      <td>t2_byn9fcck</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>28</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2589 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                  title      id  created_utc  \\\n",
-       "0     Glorious Oracle of Ohama achieves pareto effic...  n6lg1w   1620345568   \n",
-       "1                   FLGT TO THE MOON...1ST QTR #S TODAY  n6lfdp   1620345502   \n",
-       "2                            OCGN Watch for Tomorrow...  n6lfa5   1620345492   \n",
-       "3                                i think this fits here  n6lefj   1620345410   \n",
-       "4                                                 Sad 😔  n6lecl   1620345402   \n",
-       "...                                                 ...     ...          ...   \n",
-       "2584                      ASO technical breakout and DD  n5udz9   1620259377   \n",
-       "2585                                 First YOLO on CRSR  n5udy3   1620259375   \n",
-       "2586                                   Rkt to the moon!  n5udsv   1620259363   \n",
-       "2587  My therapist told me I’m delusional for thinki...  n5udq9   1620259358   \n",
-       "2588  $CCIV - Lucid motors testing their FSD in Frem...  n5ucbx   1620259246   \n",
+       "2493                                            HOLDGME  n5vldf   1620263260   \n",
+       "1719                       The Insurrection of the Apes  n63q7n   1620294990   \n",
+       "514                            When will the dip dip???  n6f0w5   1620328286   \n",
+       "1071                            We’ve been compromised!  n69ajb   1620313307   \n",
+       "467                                             No FOMO  n6fig8   1620329606   \n",
+       "2044  Got my first letter from Fidelity asking if I ...  n605gl   1620279374   \n",
+       "725   US Congress on today's GameStop hearing: \"We'v...  n6csms   1620322543   \n",
+       "1854  WSB mods sleeping... AMC &amp; GME to the mooo...  n62fi3   1620289149   \n",
+       "2173                                    BRING GME BACK!  n5z4si   1620275340   \n",
+       "956   100% concentration, all in GME! Final purchase...  n6am1n   1620316800   \n",
        "\n",
        "     author_fullname  is_self  score  upvote_ratio  total_awards_received  \\\n",
-       "0        t2_3qdkzqjm    False      1           1.0                      0   \n",
-       "1        t2_a0mf559i     True      1           1.0                      0   \n",
-       "2        t2_a368t9uc     True      1           1.0                      0   \n",
-       "3        t2_4ac5c7gb    False      4           1.0                      1   \n",
-       "4        t2_5qd02awb    False     32           1.0                      0   \n",
-       "...              ...      ...    ...           ...                    ...   \n",
-       "2584     t2_4p2nwfnu     True     40           1.0                     10   \n",
-       "2585     t2_6hp5jmev    False      1           1.0                      0   \n",
-       "2586     t2_7hzx72of     True      0           1.0                      0   \n",
-       "2587        t2_5juqx    False      0           1.0                      0   \n",
-       "2588     t2_byn9fcck    False      1           1.0                      0   \n",
+       "2493     t2_5syqfl4h    False  59820           1.0                    199   \n",
+       "1719     t2_a2jxbzsv    False  40055           1.0                    251   \n",
+       "514      t2_5ulprski    False  35176           1.0                    104   \n",
+       "1071     t2_11cvrlt5    False  29423           1.0                    162   \n",
+       "467      t2_462jbyck    False  13523           1.0                     92   \n",
+       "2044       t2_110ph2    False  13065           1.0                     88   \n",
+       "725       t2_e0s1you    False   7793           1.0                     33   \n",
+       "1854     t2_a0qxqff0     True   6163           1.0                     45   \n",
+       "2173     t2_4b5sdbo4     True   5820           0.5                     76   \n",
+       "956      t2_ah5h0y1b    False   4995           1.0                     28   \n",
        "\n",
-       "                                 selftext  \n",
-       "0                                          \n",
-       "1     FLGT TO THE MOON...1ST QTR #S TODAY  \n",
-       "2                               [removed]  \n",
-       "3                                          \n",
-       "4                                          \n",
-       "...                                   ...  \n",
-       "2584                            [removed]  \n",
-       "2585                                       \n",
-       "2586                                       \n",
-       "2587                                       \n",
-       "2588                                       \n",
-       "\n",
-       "[2589 rows x 9 columns]"
+       "                                               selftext  \n",
+       "2493                                                     \n",
+       "1719                                                     \n",
+       "514                                                      \n",
+       "1071                                                     \n",
+       "467                                                      \n",
+       "2044                                                     \n",
+       "725                                                      \n",
+       "1854                              AMC and GME let's go.  \n",
+       "2173  Enough with the new pump and dump every week, ...  \n",
+       "956                                                      "
       ]
      },
-     "execution_count": 281,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wsb_cleaned"
+    "wsb_cleaned.sort_values(by = \"score\", ascending = False).head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 284,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59820"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
